--- a/styles/main.css
+++ b/styles/main.css
@@ -9,36 +9,17 @@ h1,h2,h3,h4,h5{
     text-align: center;
 }
 
-.image.bowl{
-    padding: 10% 20%;
-}
-
-h1 {
-    font-size: 42px;
-    font-weight: 800;
-}
-
-h2 {
-    font-weight: 600;
-    font-size: 16px;
-}
-
 a{
     font-size: 22px;
 }
 
+.image.bowl {
+    padding-bottom: 20px;
+}
+
 @media screen and (min-width: 769px){
-    h1 {
-        font-size: 122px;
-    }
-    h2 {
-        font-weight: 700;
-        font-size: 28px;
-        margin-top: -36px;
-    }
-    .image.bowl{
-        padding: 5% 40%;
-    }
+
+
     p{
         font-size: 22px;
     }
